udagram-deployment/kubernetes/feed_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-api-feed
  labels:
    service: udagram-api-feed
spec:
  selector:
    matchLabels:
      service: udagram-api-feed
  replicas: 2
  template:
    metadata:
      labels:
        service: udagram-api-feed
    spec:
      containers:
        - name: udagram-api-feed
          image: leandrorondon/udagram-api-feed
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: aws-secret
              mountPath: "~/.aws/"
              readOnly: true
      volumes:
        - name: aws-secret
          secret:
            secretName: aws-secret
      restartPolicy: Always
