udagram-deployment/kubernetes/user_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: udagram-api-user
  labels:
    service: udagram-api-user
spec:
  selector:
    matchLabels:
      service: udagram-api-user
  replicas: 1
  template:
    metadata:
      labels:
        service: udagram-api-user
    spec:
      containers:
        - name: udagram-api-user
          image: leandrorondon/udagram-api-user
          imagePullPolicy: Always
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
      restartPolicy: Always
