udagram-deployment/kubernetes/feed_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-api-feed
  labels:
    service: udagram-api-feed
spec:
  selector:
    service: udagram-api-feed
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
