udagram-deployment/kubernetes/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udagram-frontend
  name: udagram-frontend
spec:
  selector:
    service: udagram-frontend
  ports:
    - port: 80
      targetPort: 80
  type: LoadBalancer
