udagram-deployment/kubernetes/reverseproxy_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: udagram-proxy
  name: udagram-proxy
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    service: udagram-proxy
  type: LoadBalancer
