udagram-deployment/kubernetes/user_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: udagram-api-user
  labels:
    service: udagram-api-user
spec:
  selector:
    service: udagram-api-user
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
