udagram-deployment/kubernetes/frontend_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: udagram-frontend-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    service: udagram-frontend-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: udagram-frontend
              servicePort: 80
